SERVER-14475 Cleanup the shutdown code and indicate shutdown earlier